# flight-prices

./: README.md  pyproject.toml  scrapeprices.py
database/: aircraft_schema.sql  airline_schema.sql  airport_schema.sql  city_schema.sql  flight_leg_schema.sql  itinerary_schema.sql  price_schema.sql
